fix icon overlap on currency fields

--- a/addon/styles/currency-field.scss
+++ b/addon/styles/currency-field.scss
@@ -23,5 +23,6 @@
 
   select {
     width: auto;
+    padding-right: 1.5rem;
   }
 }
